--- a/deployments/examples/ocis_wopi/.env
+++ b/deployments/examples/ocis_wopi/.env
@@ -55,3 +55,8 @@ TIKA_IMAGE=
 # you need uncomment following line. Please see documentation at
 # https://owncloud.dev/ocis/deployment/monitoring-tracing/
 #COMPOSE_FILE=docker-compose.yml:monitoring_tracing/docker-compose-additions.yml
+
+### Uppy Companion
+COMPANION_DOMAIN=
+COMPANION_ONEDRIVE_KEY=
+COMPANION_ONEDRIVE_SECRET=
