--- a/deployments/examples/ocis_wopi/docker-compose.yml
+++ b/deployments/examples/ocis_wopi/docker-compose.yml
@@ -11,6 +11,7 @@ services:
           - ${WOPISERVER_DOMAIN:-wopiserver.owncloud.test}
           - ${COLLABORA_DOMAIN:-collabora.owncloud.test}
           - ${ONLYOFFICE_DOMAIN:-onlyoffice.owncloud.test}
+          - ${COMPANION_DOMAIN:-companion.owncloud.test}
     command:
       - "--log.level=${TRAEFIK_LOG_LEVEL:-ERROR}"
       # letsencrypt configuration
@@ -245,6 +246,32 @@ services:
       ocis-net:
     restart: always
 
+  companion:
+    image: ${COMPANION_IMAGE:-transloadit/companion:4.5.1}
+    networks:
+      ocis-net:
+    environment:
+      NODE_ENV: production
+      NODE_TLS_REJECT_UNAUTHORIZED: 0
+      COMPANION_DATADIR: /tmp/companion/
+      COMPANION_DOMAIN: ${COMPANION_DOMAIN:-companion.owncloud.test}
+      COMPANION_PROTOCOL: https
+      COMPANION_UPLOAD_URLS: ${OCIS_DOMAIN:-ocis.owncloud.test}
+      COMPANION_ONEDRIVE_KEY: "${COMPANION_ONEDRIVE_KEY}"
+      COMPANION_ONEDRIVE_SECRET: "${COMPANION_ONEDRIVE_SECRET}"
+    volumes:
+      - companion-data:/tmp/companion/
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.companion.entrypoints=https"
+      - "traefik.http.routers.companion.rule=Host(`${COMPANION_DOMAIN:-companion.owncloud.test}`)"
+      - "traefik.http.routers.companion.tls.certresolver=http"
+      - "traefik.http.routers.companion.service=companion"
+      - "traefik.http.services.companion.loadbalancer.server.port=3020"
+    logging:
+      driver: "local"
+    restart: always
+
   inbucket:
     image: inbucket/inbucket
     networks:
@@ -273,6 +300,7 @@ volumes:
   ocis-config:
   ocis-data:
   wopi-recovery:
+  companion-data:
 
 networks:
   ocis-net:
