--- a/deployments/continuous-deployment-config/ocis_wopi/released.yml
+++ b/deployments/continuous-deployment-config/ocis_wopi/released.yml
@@ -34,6 +34,9 @@
           TRAEFIK_ACME_MAIL: wkloucek@owncloud.com
           OCIS_DOCKER_TAG: 4.0.0
           OCIS_DOMAIN: ocis.ocis-wopi.released.owncloud.works
+          COMPANION_DOMAIN: companion.ocis-wopi.released.owncloud.works
+          COMPANION_IMAGE: owncloud/uppy-companion:3.12.13-owncloud
+          COMPANION_WEB_CONFIG_FILE_NAME: web-released.yaml
           WOPISERVER_DOMAIN: wopiserver.ocis-wopi.released.owncloud.works
           COLLABORA_DOMAIN: collabora.ocis-wopi.released.owncloud.works
           ONLYOFFICE_DOMAIN: onlyoffice.ocis-wopi.released.owncloud.works
