--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -236,6 +236,7 @@ default:
       context: *common_ldap_suite_context
       contexts:
         - FeatureContext: *common_feature_context_params
+        - WebDavPropertiesContext:
 
   extensions:
     rdx\behatvars\BehatVariablesExtension: ~
