--- a/tests/acceptance/config/behat-core.yml
+++ b/tests/acceptance/config/behat-core.yml
@@ -148,6 +148,7 @@ default:
         - PublicWebDavContext:
         - TrashbinContext:
         - WebDavPropertiesContext:
+        - OcisConfigContext:
 
     coreApiSharePublicLink2:
       paths:
@@ -158,6 +159,7 @@ default:
         - PublicWebDavContext:
         - TrashbinContext:
         - WebDavPropertiesContext:
+        - OcisConfigContext:
 
     coreApiSharePublicLink3:
       paths:
@@ -305,6 +307,7 @@ default:
         - PublicWebDavContext:
         - WebDavPropertiesContext:
         - TrashbinContext:
+        - OcisConfigContext:
 
     coreApiWebdavPreviews:
       paths:
@@ -379,6 +382,7 @@ default:
         - PublicWebDavContext:
         - FilesVersionsContext:
         - WebDavPropertiesContext:
+        - OcisConfigContext:
 
   extensions:
     rdx\behatvars\BehatVariablesExtension: ~
