--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -68,6 +68,7 @@ default:
         - SpacesTUSContext:
         - ArchiverContext:
         - GraphContext:
+        - OcisConfigContext:
 
     apiContract:
       paths:
