--- a/.drone.env
+++ b/.drone.env
@@ -1,3 +1,3 @@
 # The test runner source for UI tests
-WEB_COMMITID=67ced24b3a6f06b767ff8111537b4a0b85c40993
-WEB_BRANCH=changeRespCode
+WEB_COMMITID=7e710ae5abe2e9340bcde26b9954b8351a64beb3
+WEB_BRANCH=master
