feat: add and adjust configs for Web embed mode (#7766)
* feat: add and adjust configs for embed mode

* Update services/web/pkg/config/options.go

Co-authored-by: Martin <github@diemattels.at>

* docs: adjust description for WEB_OPTION_EMBED_TARGET

---------

Co-authored-by: Martin <github@diemattels.at>

--- a/services/_includes/web-config-example.yaml
+++ b/services/_includes/web-config-example.yaml
@@ -132,8 +132,7 @@ web:
       accessDeniedHelpUrl: ""
       tokenStorageLocal: true
       disabledExtensions: []
-      mode: ""
-      embedTarget: ""
+      embed: null
     styles: []
     scripts: []
     custom_translations: []
