--- a/services/_includes/frontend-config-example.yaml
+++ b/services/_includes/frontend-config-example.yaml
@@ -85,6 +85,7 @@ enable_federated_sharing_outgoing: false
 search_min_length: 3
 edition: Community
 disable_sse: false
+default_link_permissions: 1
 public_url: https://localhost:9200
 app_handler:
   insecure: false
