adding test for file version of a share in a projectspace

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -242,6 +242,7 @@ default:
       contexts:
         - FeatureContext: *common_feature_context_params
         - WebDavPropertiesContext:
+        - FilesVersionsContext:
 
     apiLocks:
       paths:
