Add config var UserListRequiresFilter (#7866)
* Add config var UserListRequiresFilter

* Fix whitespace

* Update options.go

Co-authored-by: Martin <github@diemattels.at>

---------

Co-authored-by: Martin <github@diemattels.at>

--- a/services/_includes/web-config-example.yaml
+++ b/services/_includes/web-config-example.yaml
@@ -134,6 +134,7 @@ web:
       tokenStorageLocal: true
       disabledExtensions: []
       embed: null
+      userListRequiresFilter: false
     styles: []
     scripts: []
     custom_translations: []
