--- a/services/_includes/graph-config-example.yaml
+++ b/services/_includes/graph-config-example.yaml
@@ -55,6 +55,7 @@ api:
   group_members_patch_limit: 20
   graph_username_match: default
   graph_assign_default_user_role: true
+  graph_identity_search_min_length: 3
 reva:
   address: com.owncloud.api.gateway
   tls:
