fix documentation of docs Makefile
Signed-off-by: jkoberg <jkoberg@owncloud.com>

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -4,7 +4,7 @@ include ../.bingo/Variables.mk
 
 .PHONY: help
 help:
-	@grep -E '^[a-zA-Z0-9_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
+	@grep -E '^[a-zA-Z0-9_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk -F'[:;##]' '{printf "\033[36m%-30s\033[0m %s\n", $$2, $$NF}'
 
 .PHONY: docs-generate
 docs-generate: ## run docs-generate for all oCIS services
