adding test for listing file versions in project space

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -237,6 +237,7 @@ default:
       contexts:
         - FeatureContext: *common_feature_context_params
         - WebDavPropertiesContext:
+        - FilesVersionsContext:
 
   extensions:
     rdx\behatvars\BehatVariablesExtension: ~
