[docs-only] Set special internal extended envvars to not-show state

--- a/docs/helpers/extended_vars.yaml
+++ b/docs/helpers/extended_vars.yaml
@@ -34,17 +34,17 @@ variables:
   do_ignore: true
 - rawname: registryEnv
   path: ocis-pkg/registry/registry.go:44
-  foundincode: true
+  foundincode: false
   name: MICRO_REGISTRY
   type: string
   default_value: ""
   description: 'Go micro registry type to use. Supported types are: ''nats'', ''kubernetes'',
-    ''etcd'', ''consul'', ''memory'' and ''mdns''. Will be selected automatically. Only change
-    on supervision of ownCloud Support.'
+    ''etcd'', ''consul'', ''memory'' and ''mdns''. Will be selected automatically.
+    Only change on supervision of ownCloud Support.'
   do_ignore: false
 - rawname: registryAddressEnv
   path: ocis-pkg/registry/registry.go:42
-  foundincode: true
+  foundincode: false
   name: MICRO_REGISTRY_ADDRESS
   type: string
   default_value: ""
@@ -79,4 +79,20 @@ variables:
   type: ""
   default_value: ""
   description: false positive - code that extract envvars for config structs
+  do_ignore: true
+- rawname: registryAddressEnv
+  path: ocis-pkg/registry/registry.go:44
+  foundincode: true
+  name: registryAddressEnv
+  type: ""
+  default_value: ""
+  description: ""
+  do_ignore: true
+- rawname: registryEnv
+  path: ocis-pkg/registry/registry.go:46
+  foundincode: true
+  name: registryEnv
+  type: ""
+  default_value: ""
+  description: ""
   do_ignore: true
