--- a/services/_includes/ocm-config-example.yaml
+++ b/services/_includes/ocm-config-example.yaml
@@ -70,6 +70,9 @@ grpc:
   tls: null
   protocol: ""
 grpc_client_tls: null
+service_account:
+  service_account_id: ""
+  service_account_secret: ""
 reva:
   address: com.owncloud.api.gateway
   tls:
