trash-bin cli has been exteneded by the list and restore commands (#7917)
* trash-bin cli has been exteneded by the list and restore commands

* v4 to v5 changes

---------

Co-authored-by: Roman Perekhod <rperekhod@owncloud.com>

--- a/services/_includes/storage-users-config-example.yaml
+++ b/services/_includes/storage-users-config-example.yaml
@@ -129,3 +129,6 @@ tasks:
 service_account:
   service_account_id: ""
   service_account_secret: ""
+gateway_addr: 127.0.0.1:9142
+machine_auth_api_key: ""
+max_attempts_rename_file: 0
