[docs-only] Fixing the description text of MICRO_REGISTRY

--- a/docs/helpers/extended_vars.yaml
+++ b/docs/helpers/extended_vars.yaml
@@ -38,9 +38,10 @@ variables:
   name: MICRO_REGISTRY
   type: string
   default_value: ""
-  description: 'Go micro registry type to use. Supported types are: ''nats'', ''kubernetes'',
-    ''etcd'', ''consul'', ''memory'' and ''mdns''. Will be selected automatically.
-    Only change on supervision of ownCloud Support.'
+  description: 'The Go micro registry type to use. Supported types are: ''memory'',
+    ''nats-js-kv'' (default) and ''kubernetes''. Note that ''nats'', ''etcd'', ''consul''
+    and ''mdns'' are deprecated and will be removed in a later version. Only change
+    on supervision of ownCloud Support.'
   do_ignore: false
 - rawname: registryAddressEnv
   path: ocis-pkg/registry/registry.go:122
