chore: bump web to v8.0.0-rc.1

--- a/.drone.env
+++ b/.drone.env
@@ -1,3 +1,3 @@
 # The test runner source for UI tests
-WEB_COMMITID=fd1349c4ff15c11a0a520c1e66be7db554d88241
-WEB_BRANCH=master
+WEB_COMMITID=934efe5fc60831b2bc6c353c8256c21972066398
+WEB_BRANCH=stable-8.0
