--- a/.bingo/variables.env
+++ b/.bingo/variables.env
@@ -1,4 +1,4 @@
-# Auto generated binary variables helper managed by https://github.com/bwplotka/bingo v0.6. DO NOT EDIT.
+# Auto generated binary variables helper managed by https://github.com/bwplotka/bingo v0.9. DO NOT EDIT.
 # All tools are designed to be build inside $GOBIN.
 # Those variables will work only until 'bingo get' was invoked, or if tools were installed via Makefile's Variables.mk.
 GOBIN=${GOBIN:=$(go env GOBIN)}
@@ -8,7 +8,7 @@ if [ -z "$GOBIN" ]; then
 fi
 
 
-BINGO="${GOBIN}/bingo-v0.8.0"
+BINGO="${GOBIN}/bingo-v0.9.0"
 
 BUF="${GOBIN}/buf-v1.3.1"
 
@@ -19,6 +19,8 @@ CALENS="${GOBIN}/calens-v0.4.0"
 GO_LICENSES="${GOBIN}/go-licenses-v1.5.0"
 
 GOLANGCI_LINT="${GOBIN}/golangci-lint-v1.51.2"
+
+GOVULNCHECK="${GOBIN}/govulncheck-v1.0.1"
 
 HUGO="${GOBIN}/hugo-v0.115.2"
 
