added API tests for moving a file within same folder and same name (file-id)

--- a/tests/acceptance/config/behat-core.yml
+++ b/tests/acceptance/config/behat-core.yml
@@ -287,6 +287,7 @@ default:
         - FeatureContext: *common_feature_context_params
         - WebDavPropertiesContext:
         - FilesVersionsContext:
+        - TrashbinContext:
 
     coreApiWebdavOperations:
       paths:
