--- a/services/_includes/antivirus-config-example.yaml
+++ b/services/_includes/antivirus-config-example.yaml
@@ -31,7 +31,8 @@ scanner:
   clamav:
     socket: /run/clamav/clamd.ctl
   icap:
-    timeout: 300
+    timeout: 0
+    scan_timeout: 5m0s
     url: icap://127.0.0.1:1344
     service: avscan
 max-scan-size: ""
