[tests-only][ci] split large API test suites (#8212)
* split large API test suites

* remove 30s sleep

* organize core-api test suites

* organize core-api test suites

* divide into 9 pipelines

* organize core-api test suites

* organize api-search suites

* organize api-search suites

* fix config file

--- a/tests/acceptance/config/behat-core.yml
+++ b/tests/acceptance/config/behat-core.yml
@@ -29,22 +29,6 @@ default:
       context: *common_ldap_suite_context
       contexts:
         - FeatureContext: *common_feature_context_params
-        - AuthContext:
-
-    coreApiAuthOcs:
-      paths:
-        - "%paths.base%/../features/coreApiAuthOcs"
-      context: *common_ldap_suite_context
-      contexts:
-        - FeatureContext: *common_feature_context_params
-        - AuthContext:
-
-    coreApiAuthWebDav:
-      paths:
-        - "%paths.base%/../features/coreApiAuthWebDav"
-      context: *common_ldap_suite_context
-      contexts:
-        - FeatureContext: *common_feature_context_params
         - SearchContext:
         - PublicWebDavContext:
         - WebDavPropertiesContext:
@@ -161,16 +145,6 @@ default:
         - WebDavPropertiesContext:
         - OcisConfigContext:
 
-    coreApiSharePublicLink3:
-      paths:
-        - "%paths.base%/../features/coreApiSharePublicLink3"
-      context: *common_ldap_suite_context
-      contexts:
-        - FeatureContext: *common_feature_context_params
-        - PublicWebDavContext:
-        - TrashbinContext:
-        - WebDavPropertiesContext:
-
     coreApiShareReshareToShares1:
       paths:
         - "%paths.base%/../features/coreApiShareReshareToShares1"
@@ -184,16 +158,6 @@ default:
     coreApiShareReshareToShares2:
       paths:
         - "%paths.base%/../features/coreApiShareReshareToShares2"
-      context: *common_ldap_suite_context
-      contexts:
-        - FeatureContext: *common_feature_context_params
-        - PublicWebDavContext:
-        - TrashbinContext:
-        - WebDavPropertiesContext:
-
-    coreApiShareReshareToShares3:
-      paths:
-        - "%paths.base%/../features/coreApiShareReshareToShares3"
       context: *common_ldap_suite_context
       contexts:
         - FeatureContext: *common_feature_context_params
@@ -309,38 +273,22 @@ default:
         - FeatureContext: *common_feature_context_params
         - WebDavPropertiesContext:
 
-    coreApiWebdavProperties1:
+    coreApiWebdavProperties:
       paths:
-        - "%paths.base%/../features/coreApiWebdavProperties1"
+        - "%paths.base%/../features/coreApiWebdavProperties"
       context: *common_ldap_suite_context
       contexts:
         - FeatureContext: *common_feature_context_params
         - WebDavPropertiesContext:
 
-    coreApiWebdavProperties2:
+    coreApiWebdavUpload:
       paths:
-        - "%paths.base%/../features/coreApiWebdavProperties2"
-      context: *common_ldap_suite_context
-      contexts:
-        - FeatureContext: *common_feature_context_params
-        - WebDavPropertiesContext:
-
-    coreApiWebdavUpload1:
-      paths:
-        - "%paths.base%/../features/coreApiWebdavUpload1"
+        - "%paths.base%/../features/coreApiWebdavUpload"
       context: *common_ldap_suite_context
       contexts:
         - FeatureContext: *common_feature_context_params
         - PublicWebDavContext:
         - WebDavPropertiesContext:
-
-    coreApiWebdavUpload2:
-      paths:
-        - "%paths.base%/../features/coreApiWebdavUpload2"
-      context: *common_ldap_suite_context
-      contexts:
-        - FeatureContext: *common_feature_context_params
-        - PublicWebDavContext:
 
     coreApiWebdavUploadTUS:
       paths:
