--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -149,6 +149,7 @@ default:
         - OCSContext:
         - GraphContext:
         - OcisConfigContext:
+        - SettingsContext:
 
     apiDepthInfinity:
       paths:
