use .mockery.yaml for all mocks
Signed-off-by: Jörn Friedrich Dreyer <jfd@butonic.de>

--- a/services/graph/Makefile
+++ b/services/graph/Makefile
@@ -25,14 +25,7 @@ include ../../.make/generate.mk
 
 .PHONY: ci-go-generate
 ci-go-generate: $(MOCKERY) # CI runs ci-node-generate automatically before this target
-	$(MOCKERY) --dir pkg/service/v0 --case underscore --name HTTPClient
-	$(MOCKERY) --dir pkg/service/v0 --case underscore --name Publisher
-	$(MOCKERY) --dir pkg/service/v0 --case underscore --name Permissions
-	$(MOCKERY) --dir pkg/service/v0 --case underscore --name RoleService
-	$(MOCKERY) --dir pkg/identity --output pkg/identity/mocks --case underscore --name Backend
-	$(MOCKERY) --dir pkg/identity --output pkg/identity/mocks --case underscore --name EducationBackend
-	$(MOCKERY) --srcpkg github.com/go-ldap/ldap/v3 --case underscore --filename ldapclient.go --name Client
-
+	$(MOCKERY)
 
 .PHONY: ci-node-generate
 ci-node-generate:
