--- a/services/search/Makefile
+++ b/services/search/Makefile
@@ -25,10 +25,7 @@ include ../../.make/generate.mk
 
 .PHONY: ci-go-generate
 ci-go-generate: $(PIGEON) $(MOCKERY) # CI runs ci-node-generate automatically before this target
-	$(MOCKERY) --dir pkg/engine --output pkg/engine/mocks --case underscore --name Engine
-	$(MOCKERY) --dir pkg/content --output pkg/content/mocks --case underscore --name Extractor
-	$(MOCKERY) --dir pkg/content --output pkg/content/mocks --case underscore --name Retriever
-	$(MOCKERY) --dir pkg/search --output pkg/search/mocks --case underscore --name Searcher
+	$(MOCKERY)
 	$(PIGEON) -optimize-grammar -optimize-parser -o pkg/query/kql/dictionary_gen.go pkg/query/kql/dictionary.peg
 
 .PHONY: ci-node-generate
