--- a/services/proxy/.mockery.yaml
+++ b/services/proxy/.mockery.yaml
@@ -4,6 +4,8 @@ dir: "{{.PackageName}}/mocks"
 mockname: "{{.InterfaceName}}"
 outpkg: "mocks"
 packages:
-    github.com/owncloud/ocis/v2/ocis-pkg/oidc:
+    github.com/owncloud/ocis/v2/protogen/gen/ocis/services/policies/v0:
         interfaces:
-            OIDCClient:
+            PoliciesProviderService:
+                config:
+                    dir: mocks
