--- a/services/graph/.mockery.yaml
+++ b/services/graph/.mockery.yaml
@@ -7,10 +7,11 @@ packages:
         config:
           dir: "mocks"
         interfaces:
-            HTTPClient:
-            Permissions:
-            Publisher:
-            RoleService:
+          DrivesDriveItemProvider:
+          HTTPClient:
+          Permissions:
+          Publisher:
+          RoleService:
     github.com/owncloud/ocis/v2/services/graph/pkg/identity:
         config:
             dir: "pkg/identity/mocks"
