--- a/services/search/.mockery.yaml
+++ b/services/search/.mockery.yaml
@@ -1,22 +1,16 @@
 with-expecter: true
 filename: "{{.InterfaceName | snakecase }}.go"
-dir: "{{.PackageName}}/mocks"
+dir: "pkg/{{.PackageName}}/mocks"
 mockname: "{{.InterfaceName}}"
 outpkg: "mocks"
 packages:
     github.com/owncloud/ocis/v2/services/search/pkg/engine:
-        config:
-            dir: pkg/engine/mocks
         interfaces:
             Engine:
     github.com/owncloud/ocis/v2/services/search/pkg/content:
-        config:
-            dir: pkg/content/mocks
         interfaces:
             Extractor:
             Retriever:
     github.com/owncloud/ocis/v2/services/search/pkg/search:
-        config:
-            dir: pkg/search/mocks
         interfaces:
             Searcher:
