--- a/services/graph/.mockery.yaml
+++ b/services/graph/.mockery.yaml
@@ -3,6 +3,14 @@ filename: "{{.InterfaceName | snakecase }}.go"
 mockname: "{{.InterfaceName}}"
 outpkg: "mocks"
 packages:
+    github.com/owncloud/ocis/v2/services/graph/pkg/service/v0:
+        config:
+          dir: "mocks"
+        interfaces:
+            HTTPClient:
+            Permissions:
+            Publisher:
+            RoleService:
     github.com/owncloud/ocis/v2/services/graph/pkg/identity:
         config:
             dir: "pkg/identity/mocks"
