Added tests to lists file shared with them when sync is disabled

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -316,6 +316,7 @@ default:
         - SharingNgContext:
         - PublicWebDavContext:
         - OcisConfigContext:
+        - SettingsContext:
 
   extensions:
     rdx\behatvars\BehatVariablesExtension: ~
