--- a/deployments/examples/ocis_wopi/docker-compose.yml
+++ b/deployments/examples/ocis_wopi/docker-compose.yml
@@ -108,6 +108,10 @@ services:
     image: owncloud/ocis:${OCIS_DOCKER_TAG:-latest}
     networks:
       ocis-net:
+    user: "0" # needed for apk add in entrypoint script
+    entrypoint:
+      - /bin/sh
+      - /entrypoint-override.sh
     command: app-provider server
     environment:
       # use the internal service name of the gateway
@@ -127,10 +131,13 @@ services:
       # share the registry with the ocis container
       MICRO_REGISTRY_ADDRESS: ocis:9233
     volumes:
+      - ./config/ocis-appprovider-collabora/entrypoint-override.sh:/entrypoint-override.sh
       - ocis-config:/etc/ocis
     logging:
       driver: ${LOG_DRIVER:-local}
     restart: always
+    depends_on:
+      - ocis
 
   ocis-appprovider-onlyoffice:
     image: owncloud/ocis:${OCIS_DOCKER_TAG:-latest}
@@ -164,6 +171,8 @@ services:
     logging:
       driver: ${LOG_DRIVER:-local}
     restart: always
+    depends_on:
+      - ocis
 
   wopiserver:
     image: cs3org/wopiserver:${WOPISERVER_DOCKER_TAG:-v10.3.0}
