--- a/deployments/continuous-deployment-config/ocis_s3/latest.yml
+++ b/deployments/continuous-deployment-config/ocis_s3/latest.yml
@@ -2,12 +2,12 @@
 - name: continuous-deployment-ocis-s3-latest
   server:
     server_type: cx21
-    image: ubuntu-20.04
+    image: ubuntu-22.04
     location: nbg1
     initial_ssh_key_names:
       - owncloud-ocis@drone.owncloud.com
     labels:
-      owner: wkloucek
+      owner: ocis-team
       for: oCIS-continuous-deployment-examples
     rebuild: $REBUILD
     rebuild_carry_paths:
@@ -31,7 +31,7 @@
         docker_compose_path: deployments/examples/ocis_s3
         env:
           INSECURE: "false"
-          TRAEFIK_ACME_MAIL: wkloucek@owncloud.com
+          TRAEFIK_ACME_MAIL: mbarz@owncloud.com
           OCIS_DOCKER_TAG: latest
           OCIS_DOMAIN: ocis.ocis-s3.latest.owncloud.works
           MINIO_DOMAIN: minio.ocis-s3.latest.owncloud.works
