--- a/deployments/continuous-deployment-config/ocis_traefik/released.yml
+++ b/deployments/continuous-deployment-config/ocis_traefik/released.yml
@@ -2,12 +2,12 @@
 - name: continuous-deployment-ocis-traefik-released
   server:
     server_type: cx21
-    image: ubuntu-20.04
+    image: ubuntu-22.04
     location: nbg1
     initial_ssh_key_names:
       - owncloud-ocis@drone.owncloud.com
     labels:
-      owner: wkloucek
+      owner: ocis-team
       for: oCIS-continuous-deployment-examples
     rebuild: $REBUILD
     rebuild_carry_paths:
@@ -31,8 +31,8 @@
         docker_compose_path: deployments/examples/ocis_traefik
         env:
           INSECURE: "false"
-          TRAEFIK_ACME_MAIL: wkloucek@owncloud.com
-          OCIS_DOCKER_TAG: 4.0.0
+          TRAEFIK_ACME_MAIL: mbarz@owncloud.com
+          OCIS_DOCKER_TAG: 4.0.6
           OCIS_DOMAIN: ocis.ocis-traefik.released.owncloud.works
           DEMO_USERS: "true"
           INBUCKET_DOMAIN: mail.ocis-traefik.released.owncloud.works
