--- a/services/_includes/sharing-config-example.yaml
+++ b/services/_includes/sharing-config-example.yaml
@@ -36,6 +36,7 @@ events:
   auth_username: ""
   auth_password: ""
 skip_user_groups_in_token: false
+enable_resharing: true
 user_sharing_driver: jsoncs3
 user_sharing_drivers:
   jsoncs3:
