test(api): use new json schema assertion lib that supports latest schema drafts

--- a/vendor-bin/behat/composer.json
+++ b/vendor-bin/behat/composer.json
@@ -22,6 +22,6 @@
       "laminas/laminas-ldap": "^2.15",
       "ankitpokhrel/tus-php": "^2.3",
       "wapmorgan/unified-archive": "^1.1.10",
-      "helmich/phpunit-json-assert": "^3.4"
+      "swaggest/json-schema": "^0.12.42"
     }
   }
