add test for uploading with Tus using CORS

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -150,6 +150,8 @@ default:
         - GraphContext:
         - OcisConfigContext:
         - SettingsContext:
+        - TUSContext:
+        - SpacesTUSContext:
 
     apiDepthInfinity:
       paths:
