Add epub-reader to apps default config (#8410)

--- a/services/_includes/web-config-example.yaml
+++ b/services/_includes/web-config-example.yaml
@@ -88,6 +88,7 @@ web:
     - pdf-viewer
     - external
     - admin-settings
+    - epub-reader
     applications: []
     external_apps:
     - id: preview
