chore: bump web to v9.0.0-alpha.1

--- a/.drone.env
+++ b/.drone.env
@@ -1,3 +1,3 @@
 # The test runner source for UI tests
-WEB_COMMITID=98f771cb1424a864805bffd9084ddfc3eea01e49
-WEB_BRANCH=stable-8.0
+WEB_COMMITID=f0ecc835614411bdad7ef4ad5624f175634944d9
+WEB_BRANCH=master
