--- a/services/web/Makefile
+++ b/services/web/Makefile
@@ -1,6 +1,6 @@
 SHELL := bash
 NAME := web
-WEB_ASSETS_VERSION = v8.0.0-rc.5
+WEB_ASSETS_VERSION = v9.0.0-alpha.1
 
 include ../../.make/recursion.mk
 
