drop store service in favor of a micro store implementation (#8419)
Signed-off-by: Jörn Friedrich Dreyer <jfd@butonic.de>

--- a/services/_includes/ocs-config-example.yaml
+++ b/services/_includes/ocs-config-example.yaml
@@ -43,5 +43,12 @@ http:
     cert: ""
     key: ""
 grpc_client_tls: null
+signing_keys:
+  store: nats-js-kv
+  addresses:
+  - 127.0.0.1:9233
+  ttl: 12h0m0s
+  username: ""
+  password: ""
 token_manager:
   jwt_secret: ""
